--- a/ActivityWebsite/ActivityWebsite.csproj
+++ b/ActivityWebsite/ActivityWebsite.csproj
@@ -33,7 +33,7 @@
     <OutputPath>bin\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <WarningLevel>2</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -169,9 +169,11 @@
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
+    <Compile Include="Authenticate\AuthorizeRoute.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="CustomHelper\CustomHelper.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -182,6 +184,14 @@
     <Compile Include="Migrations\202012050413000_AddAuthenticateType.cs" />
     <Compile Include="Migrations\202012050413000_AddAuthenticateType.Designer.cs">
       <DependentUpon>202012050413000_AddAuthenticateType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202012120240013_AddStatus.cs" />
+    <Compile Include="Migrations\202012120240013_AddStatus.Designer.cs">
+      <DependentUpon>202012120240013_AddStatus.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202012120245175_EditAddStatus.cs" />
+    <Compile Include="Migrations\202012120245175_EditAddStatus.Designer.cs">
+      <DependentUpon>202012120245175_EditAddStatus.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -321,6 +331,7 @@
     <Content Include="Plugins\jQuery\js\jquery.validate.unobtrusive.js" />
     <Content Include="Plugins\jQuery\js\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\User\Account\Login.js" />
+    <Content Include="Scripts\User\Manage\ConfirmEmail.js" />
     <Content Include="Scripts\User\Shared\main.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -343,7 +354,6 @@
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\Register.cshtml" />
     <Content Include="Views\Account\ResetPassword.cshtml" />
-    <Content Include="Views\Manage\AddPhoneNumber.cshtml" />
     <Content Include="Views\Manage\ChangePassword.cshtml" />
     <Content Include="Views\Manage\Index.cshtml" />
     <Content Include="Views\Manage\ManageLogins.cshtml" />
@@ -352,6 +362,10 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_Menu.cshtml" />
+    <Content Include="Views\Shared\_Breadcrumb.cshtml" />
+    <Content Include="Views\Account\Disabled.cshtml" />
+    <Content Include="Views\Manage\_LeftPanel.cshtml" />
+    <Content Include="Views\Manage\ChangeUsername.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -372,6 +386,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202012050413000_AddAuthenticateType.resx">
       <DependentUpon>202012050413000_AddAuthenticateType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202012120240013_AddStatus.resx">
+      <DependentUpon>202012120240013_AddStatus.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202012120245175_EditAddStatus.resx">
+      <DependentUpon>202012120245175_EditAddStatus.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
