--- a/ActivityWebsite/Web.config
+++ b/ActivityWebsite/Web.config
@@ -5,11 +5,12 @@
   -->
 <configuration>
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-PO446FT;Initial Catalog=Activity;Integrated Security=True" providerName="System.Data.SqlClient" /><add name="ActivityEntities" connectionString="metadata=res://*/Models.ActivityModel.csdl|res://*/Models.ActivityModel.ssdl|res://*/Models.ActivityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-PO446FT;initial catalog=Activity;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="ActivityEntities1" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-PO446FT;initial catalog=Activity;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-PO446FT;Initial Catalog=Activity;Integrated Security=True" providerName="System.Data.SqlClient" />
+  <add name="DbModel" connectionString="metadata=res://*/Models.DbModel.csdl|res://*/Models.DbModel.ssdl|res://*/Models.DbModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-PO446FT;initial catalog=Activity;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
