--- a/ActivityWebsite/package.json
+++ b/ActivityWebsite/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^24.0.0",
     "@ckeditor/ckeditor5-react": "^3.0.0",
-    "@ckeditor/ckeditor5-upload": "^24.0.0"
+    "@ckeditor/ckeditor5-upload": "^24.0.0",
+    "axios": "^0.21.1",
+    "google-map-react": "^2.1.9",
+    "prop-types": "^15.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
