--- a/ActivityWebsite/package.json
+++ b/ActivityWebsite/package.json
@@ -9,12 +9,14 @@
     "@ckeditor/ckeditor5-upload": "^24.0.0",
     "axios": "^0.21.1",
     "google-map-react": "^2.1.9",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react-tooltip": "^4.2.11"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-react": "^7.12.10",
+    "@material-ui/core": "^4.11.2",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "react": "^17.0.1",
