--- a/ActivityWebsite/ActivityWebsite.csproj
+++ b/ActivityWebsite/ActivityWebsite.csproj
@@ -244,10 +244,13 @@
     <Compile Include="Models\Category.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Models\ClubViewModels.cs" />
     <Compile Include="Models\Club.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\ClubCategory.cs">
+      <DependentUpon>DbModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ClubViewModels.cs" />
     <Compile Include="Models\DbModel.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -264,6 +267,9 @@
       <DependentUpon>DbModel.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Image.cs">
+      <DependentUpon>DbModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -427,7 +433,7 @@
     <Content Include="ReactJS\API\Category.js" />
     <Content Include="ReactJS\Club\FormCreate.js" />
     <Content Include="ReactJS\Components\DescriptionArea.js" />
-    <Content Include="ReactJS\Components\ErrorAlert.js" />
+    <Content Include="ReactJS\Components\Alert.js" />
     <Content Include="ReactJS\Components\InputFile.css" />
     <Content Include="ReactJS\Components\InputFile.js" />
     <Content Include="ReactJS\Components\InputCol12.js" />
@@ -477,6 +483,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Content\Media\Images\Club\" />
     <Folder Include="Content\Media\Images\Description\" />
     <Folder Include="dist\" />
   </ItemGroup>
