--- a/ActivityWebsite/package.json
+++ b/ActivityWebsite/package.json
@@ -19,10 +19,13 @@
     "@material-ui/core": "^4.11.2",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
+    "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.2.4",
+    "sanitize-html": "^2.3.0",
     "style-loader": "^2.0.0",
+    "url": "^0.11.0",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.2.0"
   },
