--- a/ActivityWebsite/package.json
+++ b/ActivityWebsite/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "google-map-react": "^2.1.9",
     "prop-types": "^15.7.2",
+    "react-rating-stars-component": "^2.2.0",
     "react-tooltip": "^4.2.11"
   },
   "devDependencies": {
