--- a/ActivityWebsite/ActivityWebsite.csproj
+++ b/ActivityWebsite/ActivityWebsite.csproj
@@ -197,6 +197,7 @@
     <Compile Include="Api\CommentController.cs" />
     <Compile Include="Api\ImageController.cs" />
     <Compile Include="Api\PostController.cs" />
+    <Compile Include="Api\UserController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
@@ -222,6 +223,7 @@
     <Compile Include="EF\Comment.cs" />
     <Compile Include="EF\Image.cs" />
     <Compile Include="EF\Post.cs" />
+    <Compile Include="EF\User.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -290,6 +292,9 @@
     </Compile>
     <Compile Include="Models\PostViewAPIModel.cs" />
     <Compile Include="Models\PostViewModel.cs" />
+    <Compile Include="Models\UserFollow.cs">
+      <DependentUpon>DbModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\UserLike.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
@@ -297,7 +302,12 @@
     <Content Include="Content\css\Shared\ckeditor.css" />
     <Content Include="ReactJS\API\Comment.js" />
     <Content Include="ReactJS\API\Post.js" />
+    <Content Include="ReactJS\API\User.js" />
     <Content Include="ReactJS\ckEditorExclude.css" />
+    <Content Include="ReactJS\Club\Comment.js" />
+    <Content Include="ReactJS\Club\CommentBox.js" />
+    <Content Include="ReactJS\Club\CommentInput.js" />
+    <Content Include="ReactJS\Club\CommentList.js" />
     <Content Include="ReactJS\Club\DetailAbout.js" />
     <Content Include="ReactJS\Club\DetailAddress.js" />
     <Content Include="ReactJS\Club\DetailCategory.js" />
