--- a/ActivityWebsite/package.json
+++ b/ActivityWebsite/package.json
@@ -12,7 +12,8 @@
     "prop-types": "^15.7.2",
     "qs": "^6.9.6",
     "react-rating-stars-component": "^2.2.0",
-    "react-tooltip": "^4.2.11"
+    "react-tooltip": "^4.2.11",
+    "signalr-no-jquery": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
