--- a/ActivityWebsite/package.json
+++ b/ActivityWebsite/package.json
@@ -8,6 +8,7 @@
     "@ckeditor/ckeditor5-react": "^3.0.0",
     "@ckeditor/ckeditor5-upload": "^24.0.0",
     "axios": "^0.21.1",
+    "emoji-picker-react": "^3.4.2",
     "google-map-react": "^2.1.9",
     "prop-types": "^15.7.2",
     "qs": "^6.9.6",
