--- a/ActivityWebsite/ActivityWebsite.csproj
+++ b/ActivityWebsite/ActivityWebsite.csproj
@@ -559,6 +559,8 @@
     <Content Include="ReactJS\Components\GoogleMap.js" />
     <Content Include="ReactJS\Components\GoogleMapSearchBox.js" />
     <Content Include="ReactJS\Components\SearchBar.js" />
+    <Content Include="ReactJS\Manage\Club.js" />
+    <Content Include="ReactJS\Manage\ClubTable.js" />
     <Content Include="ReactJS\Post\Context.js" />
     <Content Include="ReactJS\Post\DetailCommentInput.js" />
     <Content Include="ReactJS\Post\DetailReplyComment.js" />
@@ -619,6 +621,7 @@
     <Content Include="Views\Post\Create.cshtml" />
     <Content Include="Views\Post\Edit.cshtml" />
     <Content Include="Views\Post\Detail.cshtml" />
+    <Content Include="Views\Manage\Club.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
