--- a/ActivityWebsite/package.json
+++ b/ActivityWebsite/package.json
@@ -7,11 +7,14 @@
     "@ckeditor/ckeditor5-build-classic": "^24.0.0",
     "@ckeditor/ckeditor5-react": "^3.0.0",
     "@ckeditor/ckeditor5-upload": "^24.0.0",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
     "emoji-picker-react": "^3.4.2",
     "global": "^4.4.0",
     "google-map-react": "^2.1.9",
     "iisexpress-proxy": "^1.5.3",
+    "material-table": "^1.69.2",
+    "material-ui-confirm": "^2.1.1",
     "prop-types": "^15.7.2",
     "qs": "^6.9.6",
     "react-rating-stars-component": "^2.2.0",
@@ -23,7 +26,7 @@
     "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-react": "^7.12.10",
-    "@material-ui/core": "^4.11.2",
+    "@material-ui/core": "^4.11.3",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "moment": "^2.29.1",
