Add Remove Group Using Trigger

--- a/ActivityWebsite/ActivityWebsite.csproj
+++ b/ActivityWebsite/ActivityWebsite.csproj
@@ -559,8 +559,10 @@
     <Content Include="ReactJS\Components\GoogleMap.js" />
     <Content Include="ReactJS\Components\GoogleMapSearchBox.js" />
     <Content Include="ReactJS\Components\SearchBar.js" />
+    <Content Include="ReactJS\Components\SnackBars.js" />
     <Content Include="ReactJS\Manage\Club.js" />
     <Content Include="ReactJS\Manage\ClubTable.js" />
+    <Content Include="ReactJS\Manage\Post.js" />
     <Content Include="ReactJS\Post\Context.js" />
     <Content Include="ReactJS\Post\DetailCommentInput.js" />
     <Content Include="ReactJS\Post\DetailReplyComment.js" />
@@ -622,6 +624,7 @@
     <Content Include="Views\Post\Edit.cshtml" />
     <Content Include="Views\Post\Detail.cshtml" />
     <Content Include="Views\Manage\Club.cshtml" />
+    <Content Include="Views\Manage\Post.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
