--- a/ActivityWebsite/package.json
+++ b/ActivityWebsite/package.json
@@ -18,6 +18,7 @@
     "material-ui-confirm": "^2.1.1",
     "prop-types": "^15.7.2",
     "qs": "^6.9.6",
+    "query-string": "^6.14.1",
     "react-rating-stars-component": "^2.2.0",
     "react-toastify": "^7.0.2",
     "react-tooltip": "^4.2.11",
