--- a/ActivityWebsite/package.json
+++ b/ActivityWebsite/package.json
@@ -20,8 +20,10 @@
     "qs": "^6.9.6",
     "query-string": "^6.14.1",
     "react-rating-stars-component": "^2.2.0",
+    "react-router-dom": "^5.2.0",
     "react-toastify": "^7.0.2",
     "react-tooltip": "^4.2.11",
+    "recharts": "^2.0.8",
     "signalr-no-jquery": "^0.2.0"
   },
   "devDependencies": {
